--- a/gb/19/7/29/n11415725.md
+++ b/gb/19/7/29/n11415725.md
@@ -1,26 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aopp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aopp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aopp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aopp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aopp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aopp286/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aopp286/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aopp286/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>一文看懂 中共禁止中国人出境 扣留外国人</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2012/11/1211240929162320.jpg" />
 <h6>日前，寻求澳洲庇护的中共特工王立强对大纪元记者讲述了中共对香港的渗透与操控台湾选举等的内幕，及他决定与中共决裂的原因。(WANG ZHAO/AFP/GettyImages)
 </h6>
 <hr>
-	<p>【大纪元2019年07月29日讯】（大纪元记者吴馨综合报导）中共不仅随意禁止中国公民出境，自7月以来，中共还扣留多名外籍人士，包括一名美国人，凸显中共政府加大了对包括美国人在内的外国人<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E7%A6%81%E6%AD%A2%E5%87%BA%E5%A2%83.md#1">禁止出境</a>（离开中国境内）的力度。</p>
-<p>随着美中贸易紧张局势升级，中共官员越来越多地针对美国商人、官员和经常访问中国的人士，使他们受到各种形式的骚扰，包括禁止他们离开中国。问题不仅限于美国，其它几个国家，包括加拿大、英国和澳大利亚，都已经对其公民前往中国发出警告，并建议他们了解被中共<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E7%A6%81%E6%AD%A2%E5%87%BA%E5%A2%83.md#1">禁止出境</a>的危险。</p>
+	<p>【大纪元2019年07月29日讯】（大纪元记者吴馨综合报导）中共不仅随意禁止中国公民出境，自7月以来，中共还扣留多名外籍人士，包括一名美国人，凸显中共政府加大了对包括美国人在内的外国人<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A6%81%E6%AD%A2%E5%87%BA%E5%A2%83.md#1">禁止出境</a>（离开中国境内）的力度。</p>
+<p>随着美中贸易紧张局势升级，中共官员越来越多地针对美国商人、官员和经常访问中国的人士，使他们受到各种形式的骚扰，包括禁止他们离开中国。问题不仅限于美国，其它几个国家，包括加拿大、英国和澳大利亚，都已经对其公民前往中国发出警告，并建议他们了解被中共<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A6%81%E6%AD%A2%E5%87%BA%E5%A2%83.md#1">禁止出境</a>的危险。</p>
 <p>接受《纽约时报》采访的人士对中共当局骚扰美国人表示了越来越多的警觉，他们担心美中贸易紧张局势可能会使商人和前官员成为潜在目标。《纽约时报》采访的十几个人中有许多人要求匿名，因为他们担心中共当局的报复行为。</p>
 <p>美国商界也对中共随意扣留外国人的行为表示不满，认为这是不可接受的，且违反国际法。</p>
 <h2>外交官被谈话 科技高管被跟踪</h2>
 <p>据知情人士透露，6月下旬，中共当局试图问询美国一名前驻北京外交官。这名前外交官一直在北京参加一个人工智能论坛，他帮助组织了这次论坛。一名酒店员工在6月25日晚上给他房间打电话，说大厅里的中共政府保安人员想找他谈话。这名前外交官警觉地通过电子邮件向其他美国与会者发送电子邮件，然后去了大厅。</p>
 <p>两名便衣警察让他跟他们走，并回答问题。知情人士说，他们向他询问了他的外交身份，以及是否有外交豁免权。他们要求看他的护照，但他表示拒绝。这位前外交官打电话给美国大使馆官员。当美国高级外交官抵达后，中共官员才离开。</p>
-<figure id="attachment_11305462" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-81377998.jpg"><img class="size-large wp-image-11305462" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-81377998-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">6月下旬，中共当局试图问询美国一名前驻北京外交官。(PETER PARKS/AFP/Getty Images)</figcaption></figure>
+<figure id="attachment_11305462" aria-describedby="caption-attachment-11305462" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-81377998.jpg"><img class="size-large wp-image-11305462" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-81377998-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11305462" class="wp-caption-text">6月下旬，中共当局试图问询美国一名前驻北京外交官。(PETER PARKS/AFP/Getty Images)</figcaption></figure>
 <p>其它的突发事件也在营造恐吓气氛。今年早些时候，一名曾在中国旅行并在中国工作十多年没有发生重大事件的科技行业高管，突然被中共当局跟踪。</p>
 <p>这名高管在去参加会议的路上，突然发现有一辆黑色汽车似乎在跟着他，该车并没有采取任何预防措施来掩饰其存在。当该高管抵达机场准备离开时，约六名戴着耳机和身穿防弹背心的男子突然从那车里蹿出来。一人带着一个可见的侧手武器，另一人对这名高管进行拍摄。然后其中两名男子尾随他通过安检，一直到他前往登记口，再直到他登机离开。</p>
-<h2>律师事务所合伙人：美商界不认同中共<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E4%BA%BA%E8%B4%A8%E5%A4%96%E4%BA%A4.md#1">人质外交</a></h2>
+<h2>律师事务所合伙人：美商界不认同中共<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%BA%E8%B4%A8%E5%A4%96%E4%BA%A4.md#1">人质外交</a></h2>
 <p>据知情人士透露，6月初，保守派亿万富翁兄弟大卫和查尔斯?科氏（David and Charles Koch）所拥有的集团公司科氏工业公司（Koch Industries）的一名华裔美国高管被告知，他不能离开中国南方的酒店。随后他被审问了多日，内容是贸易战和美中关系恶化等问题。</p>
 <p>虽然当局告诉他，他将不被允许离开中国，但他们没有拿走他的护照。知情人士补充说，在美国国务院介入后，紧张局势得到平息，这名高管飞离了中国。</p>
 <p>在一些讨论中，两名了解科氏工业公司高管事件的人士认为，中共此举试图向川普总统发出一个信息。</p>
-<p>博钦律师事务所（Perkins Coie）北京办事处与在中国的美国公司合作，该事务所合伙人詹姆斯?齐默尔曼（James Zimmerman）表示：“中共政府通过在边境和酒店拘留美国人来提高关注度，这是一种非常肆无忌惮的方式，并且显然有意向川普政府发出信息：到了紧要关头，他们可以使用<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E4%BA%BA%E8%B4%A8%E5%A4%96%E4%BA%A4.md#1">人质外交</a>。如果他们朝着这个方向走，美国商界不会认同这一点，因为这会给他们的数十亿美元中国投资带来风险。”</p>
+<p>博钦律师事务所（Perkins Coie）北京办事处与在中国的美国公司合作，该事务所合伙人詹姆斯?齐默尔曼（James Zimmerman）表示：“中共政府通过在边境和酒店拘留美国人来提高关注度，这是一种非常肆无忌惮的方式，并且显然有意向川普政府发出信息：到了紧要关头，他们可以使用<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%BA%E8%B4%A8%E5%A4%96%E4%BA%A4.md#1">人质外交</a>。如果他们朝着这个方向走，美国商界不会认同这一点，因为这会给他们的数十亿美元中国投资带来风险。”</p>
 <h2>私人侦探：文革以来最恶劣的环境</h2>
 <p>随着贸易战的加剧，中共试图利用美国人向川普政府发出信息。中共在6月召集美国高管，并警告他们，如果他们遵循美国政府提出的禁止销售美国技术的禁令，他们将会受到影响。</p>
 <p>据知情人士透露，商人在中国旅行时采取了新的措施，包括使用一次性电话和清理可能包含敏感信息的笔记本电脑。总而言之，商人越来越紧张。</p>
@@ -28,11 +28,11 @@
 <p>英国私人侦探彼得?汉弗莱（Peter Humphrey）在2013年为葛兰素史克公司（GlaxoSmithKline）工作时被监禁在中国。他现居英国，就（外国）公司在中国的安全和商业问题提供咨询。他表示他的客户面临越来越多的报复：“很多西方企业都不愿意大声说话，因为他们认为事情可能会变得更糟。”</p>
 <p>他补充说：“我相信，就人们受到监视、控制、惩罚的程度而言，我们正在看到自‘文化大革命’以来最恶劣的环境。”</p>
 <p>《纽约时报》的文章呼吁，在中国开展业务的美国公司和川普政府都需要向中共政府发出一个明确的信号，即此举是非常不可接受的：美国的主要贸易伙伴不应该阻止美国公民进出中国，因为这样做违反国际法规，这是一个原则问题。</p>
-<figure id="attachment_11174596" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-57014282.jpg"><img class="size-large wp-image-11174596" src="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-57014282-600x842.jpg" alt="" width="600" b="842" /></a><figcaption class="wp-caption-text">“我相信，就人们受到监视、控制、惩罚的程度而言，我们正在看到自‘文化大革命’以来最恶劣的环境。”(AFP/Getty Images)</figcaption></figure>
+<figure id="attachment_11174596" aria-describedby="caption-attachment-11174596" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-57014282.jpg"><img class="size-large wp-image-11174596" src="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-57014282-600x842.jpg" alt="" width="600" b="842" /></a><figcaption id="caption-attachment-11174596" class="wp-caption-text">“我相信，就人们受到监视、控制、惩罚的程度而言，我们正在看到自‘文化大革命’以来最恶劣的环境。”(AFP/Getty Images)</figcaption></figure>
 <h2>中共禁止更多中国公民出境</h2>
 <p>然而，美国权威杂志《外交政策》调查发现，最容易被中共禁止出境的人不是美国商人，更普遍的是中国公民。《外交政策》有关中共禁止出境的研究表明，近年来，有数千甚至数万中国公民被禁止出境：据中共官方媒体报导，仅在上海，就有超过5000人被禁止在2016年至2018年间离开中国。</p>
 <p>利用开源文件，包括新闻报导、国际人权组织的新闻报导，以及中国学者的学术论文，《外交政策》收集了过去15年中149起禁止中国公民出境的信息。虽然有几个案件涉及商人，但大多数情况下被禁止的人都是活动家、人权律师和自由派知识分子，因为他们更有可能曝光他们的经历。虽然许多禁令是短暂的，被用来强制阻止个人参加某个特定会议，但有些已经遭受了持续数月甚至数年的出境禁令。</p>
-<figure id="attachment_7036102" style="width: 594px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2005/12/512300827311164.jpg"><img class="size-full wp-image-7036102" src="https://i.epochtimes.com/assets/uploads/2005/12/512300827311164.jpg" alt="" width="594" b="416" /></a><figcaption class="wp-caption-text">据中共官方媒体报导，仅在上海，就有超过5000人被禁止在2016年至2018年间离开中国。(AFP/Getty Images)</figcaption></figure>
+<figure id="attachment_7036102" aria-describedby="caption-attachment-7036102" style="width: 594px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2005/12/512300827311164.jpg"><img class="size-full wp-image-7036102" src="https://i.epochtimes.com/assets/uploads/2005/12/512300827311164.jpg" alt="" width="594" b="416" /></a><figcaption id="caption-attachment-7036102" class="wp-caption-text">据中共官方媒体报导，仅在上海，就有超过5000人被禁止在2016年至2018年间离开中国。(AFP/Getty Images)</figcaption></figure>
 <p>对于活动家和维权律师的出境禁令，展现了北京的这些禁令的核心目的：禁令是压制批评人权记录的关键工具，也是惩罚和平的异议人士（批评者）的手段。</p>
 <p>《外交政策》还查明了23起活动人士和律师的亲属被禁止出境的案件，其中包括一名父亲是人权律师的5岁女孩，以及著名维权律师李和平的孩子因禁令无法上大学。这些案件令人深感不安，显示中共政府利用对家庭成员施加限制，作为强迫活动家、知识分子和维权律师遵守共产党路线的手段。</p>
 <p>一些被禁止出境的人士每次想要出国旅行时，都被迫向警方做出各种承诺，例如不接受外国媒体采访、不参加海外公共活动。从本质上讲，他们必须仅仅为了获得护照而和当局逼迫他们放弃其它权利讨价还价。</p>
@@ -48,36 +48,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/3/15/n11114606.md#1">共同应对中共干扰 英前外交官支招</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/3/20/n11126350.md#1">王友群：走苏共死路 全球围堵中共</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/5/1/n11227525.md#1">中共报复不断 加拿大朝野敦促政府反击</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/5/28/n11286302.md#1">内幕：华为和中共政权的真实关系</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/15/n11114606.md#1">共同应对中共干扰 英前外交官支招</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/20/n11126350.md#1">王友群：走苏共死路 全球围堵中共</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/1/n11227525.md#1">中共报复不断 加拿大朝野敦促政府反击</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/28/n11286302.md#1">内幕：华为和中共政权的真实关系</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10131106.md#1" target="_blank">林辉：北京四中老师们健忘背后的残酷真相</a></li><li><a href="https://github.com/aopp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405751.md#1" target="_blank">林辉：燕京大学校长相信中共后的结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/28/n8535217.md#1" target="_blank">年轻秘书长年病号 幸遇法轮大法无药而愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/16/n12034796.md#1">【拍案惊奇】北京开打反习势力？美媒获瞒报铁证</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12031072.md#1">【最新疫情4.15】川普周四公布新联邦准则</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/16/n12034935.md#1">【翻墙必看】外媒曝中共秘密电话会议内容</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/17/n12038426.md#1">武汉为何突修订确诊及死亡人数 专家解读</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12032770.md#1">疫情下加拿大小狗替家人带回速食餐点</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12031185.md#1">《花木兰》票房仅874美元？迪士尼：尚未上映</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/16/n12037498.md#1">洪都拉斯扮“陈时中弟弟” 影片爆红网络</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12033483.md#1">赞歌手韦礼安英文好 黄子佼提谭德塞全场笑翻</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12030796.md#1">大陆影业停摆80多天 逾二千间影院注销</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/11/n12021603.md#1">牛顿 莎士比亚 达芬奇 经历瘟疫时做了些什么</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12033701.md#1">没喝孟婆汤？ 这些古人记得前生</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/3/25/n11972220.md#1">三和尚转生高官  身带跨世“印记”</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/2/19/n11880841.md#1">【三国英雄14】天下归心（文字版）</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12030662.md#1">米兰大教堂前的复活节演唱会 唱起那首献给神的赞美诗</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aopp286/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aopp286/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/29/n11415725.htm">一文看懂 中共禁止中国人出境 扣留外国人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/29/n11415725.htm">一文看懂 中共禁止中国人出境 扣留外国人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aopp286/djy/blob/master/gb/19/7/29/n11415725.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aopp286/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aopp286/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aopp286/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/7/29/n11415725.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
